2010-11-22  Romain Francois <romain@r-enthusiasts.com>

    * inst/include/Rcpp/Module/Module_generated_get_signature.h: templates to
    grab method signatures
    
    * inst/include/Rcpp/Module.h: CppMethod gains a signature method that returns
    the signature of the method.
    
    * R/00_classes.R: C++OverloadedMethods gains a "signatures" field that 
    contains the signature of each overload
    
    * R/Module.R: registered method gain an automatically generated self description
    that contains the method(s) signature(s) and the docstring that is declared
    in .method
    
    * inst/include/Rcpp/Module/Module_generated_CppMethod.h: implement signature

    * inst/include/Rcpp/Module/Module_generated_Pointer_CppMethod.h: idem

2010-11-21  Romain Francois <romain@r-enthusiasts.com>

	* R/Module.R: internal version of cpp_hasDefaultConstructor
	
	* src/Module.cpp: implementation (Class__has_default_constructor)
	
	* inst/include/Rcpp/Module.h: support (class_.has_default_constructor)
	
	* inst/include/Rcpp/module/Module_generated_class_constructor.h: new interface
	for exposing constructors, the init_ disappears and the template arguments
	are directly applied to the .constructor function
	
	* inst/include/Rcpp/module/Module_generated_Constructor.h: removed init_*
	
	* inst/include/Rcpp/module/Module_generated_method.h: .method gains a docstring
	argument to allow self documentation of exposed methods
	
	* inst/include/Rcpp/module/Module_generated_PointerMethod.h: idem
	
	* R/Module.R: grab method docstrings
	
2010-11-20  John M Chambers  <jmc@r-project.org>

	* R/Module.R: now checks for the existence of a default constructor
	for a C++ class and generates a suitable $initialize() method accordingly.

2010-11-20  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/MatrixRow.h: added missing return *this ;

	* R/Module.R: dispatch based on void-ness of the methods. For example
	if all methods are known to be void, etc ...
